--- a/c/main.css
+++ b/c/main.css
@@ -2,6 +2,10 @@ body {
     background-image: linear-gradient(to right, red,orange,yellow,green,blue,indigo,violet);
 }
 
+#pod {
+    width: 100%
+}
+
 #contain {
     display: grid;
     grid-gap: 2rem;
@@ -14,14 +18,34 @@ body {
     display: inline-block;
 }
 
-#col1 {
+#col2 {
     width: 100%;
 }
 
+fieldset {
+    margin-top: 1rem;
+    border: none;
+}
+
+form {
+    border-radius: 10%;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.523);
+    box-shadow: 0 10px 15px 0 black;
+    padding: 1rem;
+}
+
+input {
+    color: #dedede;
+    margin: .3rem;
+    border-radius: 20%;
+    background-color: rgba(0, 0, 0, 0.248);
+}
 
 iframe {
 	width:100%;
 	height:100%;
+    border: none;
 }
 
 .hide {
