--- a/c/main.css
+++ b/c/main.css
@@ -14,8 +14,10 @@ body {
     margin: auto;
 }
 
+
 #title {
     display: inline-block;
+    margin-left: 3rem;
 }
 
 #col2 {
@@ -36,10 +38,16 @@ form {
 }
 
 input {
+    display: inline-block;
     color: #dedede;
     margin: .3rem;
     border-radius: 20%;
     background-color: rgba(0, 0, 0, 0.248);
+    transition: all .2s ease-in-out;
+}
+
+input:hover {
+    transform: scale(1.3);
 }
 
 iframe {
